--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -54,6 +54,7 @@ $grey-400: #ffffff08;
         &:hover{
             background-color: rgb(0, 0, 0);
             transition: all .2s ease;
+            cursor: pointer;
         }
     }
 
